tests/NormalTests/paczka1/small_fuzzy/30997788.err
Error in line 6: vntQDwzT A906 ,6
Error in line 12: vntQDwzT1A90613,7
Error in line 7: e1QML A906 34,3
